[gd_scene load_steps=4 format=3 uid="uid://bxbjbxx68d4ly"]

[ext_resource type="Script" path="res://Scripts/player_controller.gd" id="1_itqn4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h478h"]
size = Vector3(0.6, 1.8, 0.6)

[sub_resource type="BoxMesh" id="BoxMesh_rsd73"]
size = Vector3(0.6, 1.8, 0.6)

[node name="Player" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_itqn4")

[node name="PlayerCollider" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_h478h")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_rsd73")

[node name="CameraPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)

[node name="RotationY" type="Marker3D" parent="CameraPos"]

[node name="RotationX" type="Marker3D" parent="CameraPos/RotationY"]

[node name="Camera" type="Camera3D" parent="CameraPos/RotationY/RotationX"]
near = 0.001

[node name="RayCast3D" type="RayCast3D" parent="CameraPos/RotationY/RotationX"]
enabled = false
target_position = Vector3(0, 0, -4)
